[package]
name = "portpicker-cli"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/qtfkwk/portpicker-cli"
license = "MIT"
description = "Pick a free unused port (CLI)"

[dependencies]
clap = { version = "4.5.22", features = ["derive", "wrap_help"] }
clap-cargo = "0.14.1"
portpicker = "0.1.1"

[[bin]]
name = "portpicker"
path = "src/main.rs"
