[package]
name = "portpicker-cli"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/qtfkwk/portpicker-cli"
license = "MIT"
description = "Pick a free unused port (CLI)"

[dependencies]
clap = { version = "4.5.36", features = ["derive", "wrap_help"] }
clap-cargo = "0.15.2"
portpicker = "0.1.1"

[[bin]]
name = "portpicker"
path = "src/main.rs"
