[package]
name = "portpicker-cli"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/qtfkwk/portpicker-cli"
license = "MIT"
description = "Pick a free unused port (CLI)"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
portpicker = "0.1.1"

[[bin]]
name = "portpicker"
path = "src/main.rs"
